--- a/store.html
+++ b/store.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>GoodGames | Store</title>
+    <title>Tetraverse | Store</title>
 
-    <meta name="description" content="GoodGames - Bootstrap template for communities and games store">
-    <meta name="keywords" content="game, gaming, template, HTML template, responsive, Bootstrap, premium">
-    <meta name="author" content="_nK">
+    <meta name="description" content="The Tetraverse Company - World of Akhira">
+    <meta name="keywords" content="game, gaming, template, HTML template, responsive, card, trading card, trading card game, premium, booster, pack, booster box, booster pack, blister pack">
+    <meta name="author" content="The Tetraverse Company">
 
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
 
@@ -192,7 +192,7 @@
             <div class="nk-nav-table">
                 
                 <a href="index.html" class="nk-nav-logo">
-                    <img src="assets/images/logo.png" alt="GoodGames" width="199">
+                    <img src="assets/images/logo.png" alt="Tetraverse" width="199">
                 </a>
                 
                 <ul class="nk-nav nk-nav-right d-none d-lg-table-cell" data-nav-mobile="#nk-nav-mobile">
