--- a/store-checkout.html
+++ b/store-checkout.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>The Tetraverse Company | Trading Card Game</title>
+    <title>Tetraverse | Checkout</title>
 
     <meta name="description" content="The Tetraverse Company- World of Akhira">
     <meta name="keywords" content="game, gaming, template, HTML template, responsive, card, trading card, trading card game, premium, booster, pack, booster box, booster pack, blister pack">
