--- a/blog-list.html
+++ b/blog-list.html
@@ -8,9 +8,9 @@
 
     <title>Tetraverse | Blog List</title>
 
-    <meta name="description" content="GoodGames - Bootstrap template for communities and games store">
-    <meta name="keywords" content="game, gaming, template, HTML template, responsive, Bootstrap, premium">
-    <meta name="author" content="_nK">
+    <meta name="description" content="The Tetraverse Company- World of Akhira">
+    <meta name="keywords" content="game, gaming, template, HTML template, responsive, card, trading card, trading card game, premium, booster, pack, booster box, booster pack, blister pack">
+    <meta name="author" content="The Tetraverse Company">
 
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
 
@@ -82,15 +82,21 @@
     <div class="container">
         <div class="nk-contacts-left">
             <ul class="nk-social-links">
-                <li><a class="nk-social-rss" href="#"><span class="fa fa-rss"></span></a></li>
-                <li><a class="nk-social-twitch" href="#"><span class="fab fa-twitch"></span></a></li>
-                <li><a class="nk-social-steam" href="#"><span class="fab fa-steam"></span></a></li>
+                <li><a class="nk-social-instagram" href="#"><span class="fab fa-instagram"></span></a></li>
                 <li><a class="nk-social-facebook" href="#"><span class="fab fa-facebook"></span></a></li>
-                <li><a class="nk-social-google-plus" href="#"><span class="fab fa-google-plus"></span></a></li>
+                <li><a class="nk-social-github" href="#"><span class="fab fa-github"></span></a></li>                        
                 <li><a class="nk-social-twitter" href="#" target="_blank"><span class="fab fa-twitter"></span></a></li>
-                <li><a class="nk-social-pinterest" href="#"><span class="fab fa-pinterest-p"></span></a></li>
+                <li><a class="nk-social-reddit" href="#"><span class="fab fa-reddit"></span></a></li>
+                
 
                 <!-- Additional Social Buttons
+                    <li><a class="nk-social-rss" href="#"><span class="fa fa-rss"></span></a></li>
+                    <li><a class="nk-social-twitch" href="#"><span class="fab fa-twitch"></span></a></li>
+                    <li><a class="nk-social-steam" href="#"><span class="fab fa-steam"></span></a></li>
+                    <li><a class="nk-social-facebook" href="#"><span class="fab fa-facebook"></span></a></li>
+                    <li><a class="nk-social-google-plus" href="#"><span class="fab fa-google-plus"></span></a></li>
+                    <li><a class="nk-social-twitter" href="#" target="_blank"><span class="fab fa-twitter"></span></a></li>
+                    <li><a class="nk-social-pinterest" href="#"><span class="fab fa-pinterest-p"></span></a></li>
                     <li><a class="nk-social-behance" href="#"><span class="fab fa-behance"></span></a></li>
                     <li><a class="nk-social-bitbucket" href="#"><span class="fab fa-bitbucket"></span></a></li>
                     <li><a class="nk-social-dropbox" href="#"><span class="fab fa-dropbox"></span></a></li>
