--- a/forum.html
+++ b/forum.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>GoodGames | Game Forum</title>
+    <title>Tetraverse | Game Forum</title>
 
-    <meta name="description" content="GoodGames - Bootstrap template for communities and games store">
-    <meta name="keywords" content="game, gaming, template, HTML template, responsive, Bootstrap, premium">
-    <meta name="author" content="_nK">
+    <meta name="description" content="The Tetraverse Company- World of Akhira">
+    <meta name="keywords" content="game, gaming, template, HTML template, responsive, card, trading card, trading card game, premium, booster, pack, booster box, booster pack, blister pack">
+    <meta name="author" content="The Tetraverse Company">
 
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
 
@@ -82,38 +82,11 @@
     <div class="container">
         <div class="nk-contacts-left">
             <ul class="nk-social-links">
-                <li><a class="nk-social-rss" href="#"><span class="fa fa-rss"></span></a></li>
-                <li><a class="nk-social-twitch" href="#"><span class="fab fa-twitch"></span></a></li>
-                <li><a class="nk-social-steam" href="#"><span class="fab fa-steam"></span></a></li>
+                <li><a class="nk-social-instagram" href="#"><span class="fab fa-instagram"></span></a></li>
                 <li><a class="nk-social-facebook" href="#"><span class="fab fa-facebook"></span></a></li>
-                <li><a class="nk-social-google-plus" href="#"><span class="fab fa-google-plus"></span></a></li>
+                <li><a class="nk-social-github" href="#"><span class="fab fa-github"></span></a></li>                        
                 <li><a class="nk-social-twitter" href="#" target="_blank"><span class="fab fa-twitter"></span></a></li>
-                <li><a class="nk-social-pinterest" href="#"><span class="fab fa-pinterest-p"></span></a></li>
-
-                <!-- Additional Social Buttons
-                    <li><a class="nk-social-behance" href="#"><span class="fab fa-behance"></span></a></li>
-                    <li><a class="nk-social-bitbucket" href="#"><span class="fab fa-bitbucket"></span></a></li>
-                    <li><a class="nk-social-dropbox" href="#"><span class="fab fa-dropbox"></span></a></li>
-                    <li><a class="nk-social-dribbble" href="#"><span class="fab fa-dribbble"></span></a></li>
-                    <li><a class="nk-social-deviantart" href="#"><span class="fab fa-deviantart"></span></a></li>
-                    <li><a class="nk-social-flickr" href="#"><span class="fab fa-flickr"></span></a></li>
-                    <li><a class="nk-social-foursquare" href="#"><span class="fab fa-foursquare"></span></a></li>
-                    <li><a class="nk-social-github" href="#"><span class="fab fa-github"></span></a></li>
-                    <li><a class="nk-social-instagram" href="#"><span class="fab fa-instagram"></span></a></li>
-                    <li><a class="nk-social-linkedin" href="#"><span class="fab fa-linkedin"></span></a></li>
-                    <li><a class="nk-social-medium" href="#"><span class="fab fa-medium"></span></a></li>
-                    <li><a class="nk-social-odnoklassniki" href="#"><span class="fab fa-odnoklassniki"></span></a></li>
-                    <li><a class="nk-social-paypal" href="#"><span class="fab fa-paypal"></span></a></li>
-                    <li><a class="nk-social-reddit" href="#"><span class="fab fa-reddit"></span></a></li>
-                    <li><a class="nk-social-skype" href="#"><span class="fab fa-skype"></span></a></li>
-                    <li><a class="nk-social-soundcloud" href="#"><span class="fab fa-soundcloud"></span></a></li>
-                    <li><a class="nk-social-slack" href="#"><span class="fab fa-slack"></span></a></li>
-                    <li><a class="nk-social-tumblr" href="#"><span class="fab fa-tumblr"></span></a></li>
-                    <li><a class="nk-social-vimeo" href="#"><span class="fab fa-vimeo"></span></a></li>
-                    <li><a class="nk-social-vk" href="#"><span class="fab fa-vk"></span></a></li>
-                    <li><a class="nk-social-wordpress" href="#"><span class="fab fa-wordpress"></span></a></li>
-                    <li><a class="nk-social-youtube" href="#"><span class="fab fa-youtube"></span></a></li>
-                -->
+                <li><a class="nk-social-reddit" href="#"><span class="fab fa-reddit"></span></a></li>
             </ul>
         </div>
         <div class="nk-contacts-right">
