--- a/store-product.html
+++ b/store-product.html
@@ -769,7 +769,7 @@
                             <div class="nk-gap-1"></div>
                             <div class="nk-product-rating" data-rating="4"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="far fa-star"></i></div>
                             <div class="nk-gap-1"></div>
-                            <div class="nk-product-price">€ 14.00</div>
+                            <div class="nk-product-price">$ 14.00</div>
                         </div>
                     </div>
                 </div>
@@ -778,14 +778,14 @@
                 <div class="col-md-6">
                     <div class="nk-product-cat">
                         <a class="nk-product-image" href="store-product.html">
-                            <img src="assets/images/product-16-xs.jpg" alt="When the last &#39;natural&#39;">
+                            <img src="assets/images/product-16-xs.jpg" alt="Tetraverse &#39;Booster Box&#39;">
                         </a>
                         <div class="nk-product-cont">
                             <h3 class="nk-product-title h5"><a href="store-product.html">Tetraverse - World of Akhira &#39;Booster Box&#39;</a></h3>
                             <div class="nk-gap-1"></div>
                             <div class="nk-product-rating" data-rating="4.5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i></div>
                             <div class="nk-gap-1"></div>
-                            <div class="nk-product-price">€ 20.00</div>
+                            <div class="nk-product-price">$ 20.00</div>
                         </div>
                     </div>
                 </div>
