--- a/store-product.html
+++ b/store-product.html
@@ -486,7 +486,7 @@
                         </div>
                         <!-- END: Product Photos -->
                     </div>
-                    <div class="col-md-6">
+<!--                    <div class="col-md-6">
 
                         <h2 class="nk-product-title h3">Just then her head </h2>
 
@@ -500,7 +500,7 @@
                         <div class="nk-product-description">
                             <p>With what mingled joy and sorrow do I take up the pen to write to my dearest friend! Oh, what a change between to-day and yesterday! Now I am friendless and alone; yesterday I was at home, in the sweet company of a sister, whom I shall ever, ever cherish! I was awakened at daybreak by the charwoman, and having arrived at the inn, was at first placed inside the coach. But, when we got to a place called Leakington. Now the races of these two have been for some ages utterly extinct.</p>
                         </div>
-
+-->
                         <!-- START: Add to Cart -->
                         <div class="nk-gap-2"></div>
                         <form action="#" class="nk-product-addtocart">
