--- a/gallery.html
+++ b/gallery.html
@@ -438,7 +438,7 @@
             <div class="nk-gap"></div>
             <div class="nk-popup-gallery">
                 <div class="row vertical-gap">
-                    <div class="col-lg-4 col-md-6">
+<!--                    <div class="col-lg-4 col-md-6">
                         <div class="nk-gallery-item-box">
                             <a href="assets/images/gallery-1.png" class="nk-gallery-item" data-size="700x875">
                                 <div class="nk-gallery-item-overlay"><span class="ion-eye"></span></div>
@@ -540,8 +540,8 @@
                                 <img src="assets/images/gallery-12-thumb.png" alt="">
                             </a>
                         </div>
-                    </div>
-                </div>
+                    </div> -->
+                </div> 
             </div>
             <!-- END: Latest Pictures -->
 
