--- a/405.html
+++ b/405.html
@@ -192,14 +192,47 @@
     <!-- START: Categories -->
     <div class="nk-gap-2"></div>
     <div class="row vertical-gap"> 
+                <div class="col-lg-4">
+            <div class="nk-feature-1">
+                <div class="nk-feature-icon">
+                    <img src="assets/images/icon-mouse.png" alt="">
+                </div>
+                <div class="nk-feature-cont">
+                    <h3 class="nk-feature-title"><a href="#">Tetra Times</a></h3>
+                    <h4 class="nk-feature-title text-main-1"><a href="blog-article.html">View Blogs</a></h4>
+                </div>
+            </div>
+        </div>
 <div class="col-lg-4">
             <div class="nk-feature-1">
                 <div class="nk-feature-icon">
                     <img src="assets/images/icon-gamepad-2.png" alt="">
                 </div>
                 <div class="nk-feature-cont">
-                    <h3 class="nk-feature-title"><a href="#">Shop</a></h3>
-                    <h4 class="nk-feature-title text-main-1"><a href="store.html">Browse Merch</a></h4>
+                    <h3 class="nk-feature-title"><a href="#">Store</a></h3>
+                    <h4 class="nk-feature-title text-main-1"><a href="store.html">Trading Cards</a></h4>
+                </div>
+            </div>
+        </div>
+                <div class="col-lg-4">
+            <div class="nk-feature-1">
+                <div class="nk-feature-icon">
+                    <img src="assets/images/icon-gamepad.png" alt="">
+                </div>
+                <div class="nk-feature-cont">
+                    <h3 class="nk-feature-title"><a href="#">Card Previews</a></h3>
+                    <h4 class="nk-feature-title text-main-1"><a href="gallery.html">View Catalog</a></h4>
+                </div>
+            </div>
+        </div>
+                <div class="col-lg-4">
+            <div class="nk-feature-1">
+                <div class="nk-feature-icon">
+                    <img src="assets/images/icon-gamepad.png" alt="">
+                </div>
+                <div class="nk-feature-cont">
+                    <h3 class="nk-feature-title"><a href="#">Gameplay</a></h3>
+                    <h4 class="nk-feature-title text-main-1"><a href="rulebook.html">View Rulebook</a></h4>
                 </div>
             </div>
         </div>
